--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,197 +6,174 @@ on:
             - '**'
 
 jobs:
-  commit:
+  lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9]
+      fail-fast: false
+
     steps:
-      - name: check out repo
+      - name: Check out repo
         uses: actions/checkout@v2
 
-      - name: make a change
-        run: |
-          echo hello there > test.txt
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.1.1
+        with:
+          version: 1.1.4
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
-      - name: commit the changes
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install Poetry dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+
+      - name: Load cached npm
+        id: cached-npm-dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install pyright dependencies
+        run: sudo npm install -g pyright
+
+      - name: Lint
+        run: |
+          source ./.venv/bin/activate
+          poe typing
+          poe lint
+          poe sort-imports
+
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9]
+      fail-fast: false
+
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Poetry action
+        uses: snok/install-poetry@v1.1.1
+        with:
+          version: 1.1.4
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install Poetry dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+
+      - name: Test it
+        run: |
+          source ./.venv/bin/activate
+          poe test-coverage -vv
+          coverage report
+
+  publish:
+    needs: [lint, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.1.1
+        with:
+          version: 1.1.4
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install Poetry dependencies
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+
+      - name: Maybe bump major
+        if: startsWith(github.event.head_commit.message, 'breaking:')
+        run: |
+            poetry version major
+
+      - name: Maybe bump minor
+        if: ${{ !(startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' ) && !(startsWith(github.event.head_commit.message, 'breaking:')))}}
+        run: |
+            poetry version minor
+
+      - name: Maybe bump patch
+        if: ${{ startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' }}
+        run: |
+          poetry version patch
+
+      - name: Get version number
+        run: |
+          VERSION=$(poetry version)
+          VERSION=${VERSION#"us-data "}
+          echo "version=$VERSION" >> $GITHUB_ENV
+
+
+      # # - name: Build and publish
+      # #   run: |
+      # #       poetry build
+      # #       poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
+      # #       poetry publish -r testpypi
+      # #   env:
+      # #       PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
+
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+            tag_name: v${{ env.version }}
+            release_name: v${{ env.version }}
+            draft: false
+            prerelease: false
+
+      - name: Commit to master
         uses: EndBug/add-and-commit@v6
         with:
-          message: this is a test
-
-
-    # lint:
-    #     runs-on: ubuntu-latest
-    #     strategy:
-    #         matrix:
-    #             python-version: [3.8, 3.9]
-    #         fail-fast: false
-
-    #     steps:
-    #         - name: check out repo
-    #           uses: actions/checkout@v2
-
-    #         - name: set up python
-    #           uses: actions/setup-python@v2
-    #           with:
-    #               python-version: ${{ matrix.python-version }}
-
-    #         - name: set up node
-    #           uses: actions/setup-node@v2
-    #           with:
-    #               node-version: '12'
-
-    #         - name: Install Poetry Action
-    #           uses: snok/install-poetry@v1.1.1
-    #           with:
-    #               version: 1.1.4
-    #               virtualenvs-create: true
-    #               virtualenvs-in-project: true
-
-    #         - name: load cached venv
-    #           id: cached-poetry-dependencies
-    #           uses: actions/cache@v2
-    #           with:
-    #               path: .venv
-    #               key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-
-    #         - name: install poetry dependencies
-    #           run: poetry install
-    #           if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-
-    #         - name: load cached npm
-    #           id: cached-npm-dependencies
-    #           uses: actions/cache@v2
-    #           with:
-    #               path: ~/.npm
-    #               key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-    #         - name: install pyright dependencies
-    #           run: sudo npm install -g pyright
-
-    #         - name: lint
-    #           run: |
-    #               source ./.venv/bin/activate
-    #               poe typing
-    #               poe lint
-    #               poe sort-imports
-
-    # test:
-    #     runs-on: ubuntu-latest
-    #     strategy:
-    #         matrix:
-    #             python-version: [3.8, 3.9]
-    #         fail-fast: false
-
-    #     steps:
-    #         - name: check out repo
-    #           uses: actions/checkout@v2
-
-    #         - name: set up python
-    #           uses: actions/setup-python@v2
-    #           with:
-    #               python-version: ${{ matrix.python-version }}
-
-    #         - name: Install Poetry Action
-    #           uses: snok/install-poetry@v1.1.1
-    #           with:
-    #               version: 1.1.4
-    #               virtualenvs-create: true
-    #               virtualenvs-in-project: true
-
-    #         - name: load cached venv
-    #           id: cached-poetry-dependencies
-    #           uses: actions/cache@v2
-    #           with:
-    #               path: .venv
-    #               key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-
-    #         - name: install poetry dependencies
-    #           run: poetry install
-    #           if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-
-    #         - name: test
-    #           run: |
-    #               source ./.venv/bin/activate
-    #               poe test-coverage -vv
-    #               coverage report
-
-    # publish:
-    #     # needs: [lint, test]
-    #     runs-on: ubuntu-latest
-    #     steps:
-    #         - name: Check out repo
-    #           uses: actions/checkout@v2
-
-    #         - name: Set up python
-    #           uses: actions/setup-python@v2
-    #           with:
-    #               python-version: 3.9
-
-    #         - name: Install poetry
-    #           uses: snok/install-poetry@v1.1.1
-    #           with:
-    #               version: 1.1.4
-    #               virtualenvs-create: true
-    #               virtualenvs-in-project: true
-
-    #         - name: Load cached venv
-    #           id: cached-poetry-dependencies
-    #           uses: actions/cache@v2
-    #           with:
-    #               path: .venv
-    #               key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-
-    #         - name: Install poetry dependencies
-    #           run: poetry install
-    #           if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-
-    #         # - name: Maybe bump major
-    #         #   if: startsWith(github.event.head_commit.message, 'breaking:')
-    #         #   run: |
-    #         #       poetry version major
-
-    #         # - name: Maybe bump patch
-    #         #   if: ${{ startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' )}}
-    #         #   run: |
-    #         #       poetry version patch
-
-    #         - name: Maybe bump patch
-    #           # if: ${{ !(startsWith(github.event.head_commit.message, 'fix:') || startsWith(github.event.head_commit.message, 'patch:' ) && !(startsWith(github.event.head_commit.message, 'breaking:')))}}
-    #           run: |
-    #               poetry version patch
-    #               cat pyproject.toml
-
-    #         - name: Get version number
-    #           run: |
-    #               VERSION=$(poetry version)
-    #               VERSION=${VERSION#"us-data "}
-    #               echo "version=$VERSION" >> $GITHUB_ENV
-
-    #         - name: cat again
-    #           run: |
-    #             echo $REF
-    #             cat pyproject.toml
-    #           env:
-    #             REF: ${{ github.ref }}
-
-    #         # # - name: Build and publish
-    #         # #   run: |
-    #         # #       poetry build
-    #         # #       poetry config pypi-token.testpypi $PYPI_TEST_TOKEN
-    #         # #       poetry publish -r testpypi
-    #         # #   env:
-    #         # #       PYPI_TEST_TOKEN: ${{ secrets.PYPI_TEST_TOKEN }}
-
-    #         # - name: Create release
-    #         #   id: create_release
-    #         #   uses: actions/create-release@latest
-    #         #   env:
-    #         #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #         #   with:
-    #         #       tag_name: v${{ env.version }}
-    #         #       release_name: v${{ env.version }}
-    #         #       draft: false
-    #         #       prerelease: false
-
-    #         # - name: echo test
-    #         #   run: echo $REF
-    #         #   env:
-    #         #     REF: ${{ github.ref }}              
+          tag: v${{ env.version }}
+          message: bumping version to v${{ env.version }}
